force-app/main/default/objects/Special_Order_Form__c/Special_Order_Form__c.object-meta.xml
<CustomObject>
    <description>This custom object is a Special Order Form used for Non FSP projects. It is part of an &quot;off-line&quot; workflow used in connection with the Non FSP Opportunity Record Type and SGIZMO order forms.</description>
    <label>Special Order Form</label>
    <nameField>
        <displayFormat>SOF-{0000000000}</displayFormat>
        <label>Special Order Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Order Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>