force-app/main/default/objects/Special_Order_Form__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>