force-app/main/default/objects/Special_Order_Form__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>This field is used when a Special Order is cancelled. It is set to the day/time when the cancellation was finalized.</description>
    <inlineHelpText>This field is used when a Special Order is cancelled. It is set to the day/time when the cancellation was finalized.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>DateTime</type>
</CustomField>