force-app/main/default/objects/Special_Order_Form__c/fields/Client_Experience_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience_Status__c</fullName>
    <label>Client Experience Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress - Content Needed</fullName>
            </value>
            <value>
                <fullName>In Progress - Approval Needed</fullName>
            </value>
            <value>
                <fullName>In Progress - Open Products</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>