force-app/main/default/objects/Special_Order_Form__c/fields/Collect_Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Collect_Content_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.surveygizmo.com/s3/5752596/FOPP/?ID=&quot;&amp;Special_Order_Full_ID__c,&quot;CLICK HERE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collect Content URL</label>
    <type>Text</type>
</CustomField>