force-app/main/default/objects/Special_Order_Form__c/fields/Convenience_Fee__c.field-meta.xml
<CustomField>
    <fullName>Convenience_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked when there should be a convenience fee applied to the Special Order (e.g. Financing fees, etc.)</description>
    <inlineHelpText>This box is checked when there should be a convenience fee applied to the Special Order (e.g. Financing fees, etc.)</inlineHelpText>
    <label>Convenience Fee</label>
    <type>Checkbox</type>
</CustomField>