force-app/main/default/objects/Special_Order_Form__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Draft = new submission from AM, Approved = reviewed by Finance and approved, Released = payment applied, payment plans setup, Cancelled = no longer active</description>
    <inlineHelpText>Draft = new submission from AM, Approved = reviewed by Finance and approved, Released = payment applied, payment plans setup, Cancelled = no longer active</inlineHelpText>
    <label>Order Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>