force-app/main/default/objects/Special_Order_Form__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>Name of Package bought by client</description>
    <inlineHelpText>Name of Package bought by client</inlineHelpText>
    <label>Package</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>