force-app/main/default/objects/Special_Order_Form__c/fields/Payment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instructions__c</fullName>
    <label>Payment Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>