force-app/main/default/objects/Special_Order_Form__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Contact record with this Special Order Form</description>
    <inlineHelpText>Associated Contact record with this Special Order Form</inlineHelpText>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Special Order Forms</relationshipLabel>
    <relationshipName>Special_Order_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>