force-app/main/default/objects/Special_Order_Form__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The opportunity record associated with this Special Order Form</description>
    <inlineHelpText>The opportunity record associated with this Special Order Form</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Special Order Forms</relationshipLabel>
    <relationshipName>Special_Order_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>