force-app/main/default/objects/Special_Order_Form__c/fields/Shipping_fee__c.field-meta.xml
<CustomField>
    <fullName>Shipping_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping fee</label>
    <type>Checkbox</type>
</CustomField>