force-app/main/default/objects/Special_Order_Form__c/fields/Special_Instructions_for_Production__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_for_Production__c</fullName>
    <label>Special Instructions for Production</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>