force-app/main/default/objects/Special_Order_Form__c/fields/Special_Order_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Full_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Order Full ID</label>
    <type>Text</type>
</CustomField>