force-app/main/default/objects/Special_Order_Form__c/fields/Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount__c</fullName>
    <description>Total $ Amount of Order as defined by the SGIZMO order form.a</description>
    <inlineHelpText>Total $ Amount of Order as defined by the SGIZMO order form.a</inlineHelpText>
    <label>Total Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>