force-app/main/default/objects/Special_Order_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Package__c</columns>
    <columns>Payment_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>