force-app/main/default/objects/Special_Order_Form__c/listViews/Fortune_Fee_Only.listView-meta.xml
<ListView>
    <fullName>Fortune_Fee_Only</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Client_Experience_Status__c</columns>
    <columns>Next_Action_Date__c</columns>
    <columns>Package__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>Special_Instructions_for_Production__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <label>Fortune Fee-Only</label>
</ListView>